--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 	
 		<p style="color: rgb(246, 72, 34)"><b>  Ganesh Chaturthi, 19 September 2023   </b></p>
 		-->
+		<p style="color: rgb(229, 54, 19)"><b>  Details Are updated till 22 Oct 2023   </b></p>
 
 		<div style="margin-top:50px">
 			<div>
