--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
 	<!--
 			<img class="NO-CACHE" data-src="img/GC.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
 	
-			
-		<p style="color: rgb(246, 72, 34)"><b>  Ganesh Chaturthi, 19 September 2023   </b></p>
+		
 		-->
 		<p style="color: rgb(229, 54, 19)"><b>  Details Are updated till 22 Oct 2023   </b></p>
+
+		<p style="color: rgb(37, 34, 246)"><b>  Dussehra Celebration , 23 Oct 2023 From 7:00 PM  </b></p>
 
 		<div style="margin-top:50px">
 			<div>
