--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -153,7 +153,7 @@
   list.push("	P1-Villa-8	,,,,,,,,,,,");
   list.push("	P1-Villa-9	,Raghvendra Sharma,,,,,,,,,,");
   list.push("	P1-Villa-10	,Jogendra Sachdeva,500,500,500,,,,,200,200,200");
-  list.push("	P1-Villa-11	,Sundeep Mahala,500,500,500,,,,,,,");
+  list.push("	P1-Villa-11	,Sundeep Mahala,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-12	,Gaurav Kothari,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-13	,Anil Sharma,500,500,500,,,,,,,");
   list.push("	P1-Villa-14	,,,,,,,,,,,");
@@ -162,7 +162,7 @@
   list.push("	P1-Villa-17	,,,,,,,,,,,");
   list.push("	P1-Villa-18	,,,,,,,,,,,");
   list.push("	P1-Villa-19	,Hitesh Ji,,,,,,,,,,");
-  list.push("	P1-Villa-20	,Ved Prakash Parashar,500,500,500,,,,,,,");
+  list.push("	P1-Villa-20	,Ved Prakash Parashar,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-21	,,,,,,,,,,,");
   list.push("	P1-Villa-22	,,,,,,,,,,,");
   list.push("	P1-Villa-23	,,,,,,,,,,,");
@@ -186,13 +186,13 @@
   list.push("	P1-Villa-41	,,,,,,,,,,,");
   list.push("	P1-Villa-42	,Prakash Ji,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-43	,Arun Tripathi,500,500,500,500,500,500,-1500,200,200,200");
-  list.push("	P1-Villa-44	,Ravindra Verma,500,500,500,,,,,,200,200,200");
+  list.push("	P1-Villa-44	,Ravindra Verma,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-45	,Nand Singh Rajawat,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-46	,Vikas Mahala,500,500,500,,,,,,,");
   list.push("	P1-Villa-47	,Manoj Ji,500,500,500,,,,,,,");
   list.push("	P1-Villa-48	,R C Sharma,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-49	,,,,,,,,,,,");
-  list.push("	P1-Villa-50	,Abhishek Garg,500,500,500,,,,,,,");
+  list.push("	P1-Villa-50	,Abhishek Garg,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-51	,Jatin Kumar,500,500,500,,,,,,,");
   list.push("	P1-Villa-52	,Shailesh Bansal,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-53	,Rohit Jain,500,500,500,,,,,200,200,200");
@@ -203,9 +203,9 @@
   list.push("	P1-Villa-58	,,,,,,,,,,,");
   list.push("	P1-Villa-59	,,,,,,,,,,,");
   list.push("	P1-Villa-60	,,,,,,,,,,,");
-  list.push("	P1-Villa-61	,,,,,,,,,,,");
+  list.push("	P1-Villa-61	,Naresh Dhanjani,,,,,,,,200,200,200");
   list.push("	P1-Villa-62	,Lal Singh,0,0,0,,,,,,,,");
-  list.push("	P1-Villa-63	,Yogesh Ji,500,500,500,,,,,,,");
+  list.push("	P1-Villa-63	,Yogesh Ji,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-64	,Sahil Meghnani,500,500,500,,,,,,,");
   list.push("	P1-Villa-65	,Jalaj Rajpurohit,500,500,500,500,500,500,-1500,200,200,200");
   list.push("	P1-Villa-66	,,,,,,,,,,,");
@@ -227,13 +227,13 @@
   list.push("	P1-Villa-82	,,,,,,,,,,,");
   list.push("	P1-Villa-83	,,,,,,,,,,,");
   list.push("	P1-Villa-84	,,,,,,,,,,,");
-  list.push("	P1-Villa-85	,Pradeep Verma,500,500,500,,,,,,,");
+  list.push("	P1-Villa-85	,Pradeep Verma,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-86	,Surendra Agrawal,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-87	,Devendra Singh,500,500,500,,,,,200,200,200");
-  list.push("	P1-Villa-88	,Pankaj Chauhan,500,500,500,500,500,500,-1500,,,");
+  list.push("	P1-Villa-88	,Pankaj Chauhan,500,500,500,500,500,500,-1500,200,200,200");
   list.push("	P1-Villa-89	,,,,,,,,,,,");
   list.push("	P1-Villa-90	,,,,,,,,,,,");
-  list.push("	P1-Villa-91	,,,,,,,,,,,");
+  list.push("	P1-Villa-91	,Rajendra Prasad Gupta,,,,,,,,200,200,200");
   list.push("	P1-Villa-92	,,,,,,,,,,,");
   list.push("	P1-Villa-93	,,,,,,,,,,,");
   list.push("	P1-Villa-94	,,,,,,,,,,,");
@@ -263,10 +263,10 @@ list.push("P1-Villa-111,	Rajat Kumar Sharma,	,,,,,,,,,,");
         list.push("P2-Villa-05,	Manju Sharma,	,,,,,,,,,,");
         list.push("P2-Villa-06,	Monika Kheskani,	,,,,,,,,200,200,200");
         list.push("P2-Villa-07,	shishir Nama,	,,,,,,,,,,");
-        list.push("P2-Villa-08,	Saroj Sharma,	,,,,,,,,,,");
+        list.push("P2-Villa-08,	Saroj Sharma,	,,,,,,,,200,200,200");
         list.push("P2-Villa-09,	Raj kumar Sharma,	,,,,,,,,200,200,200");
         list.push("P2-Villa-10,	Deokanta sharma,	,,,,,,,,,,");
-        list.push("P2-Villa-11,	Payal,	,,,,,,,,,,");
+        list.push("P2-Villa-11,	Payal,	,,,,,,,,200,200,200");
         list.push("P2-Villa-12,	Rashmi Jain,	,,,,,,,,,,");
         list.push("P2-Villa-13,	Ankur Surana,	,,,,,,,,200,200,200");
         list.push("P2-Villa-14,	Jitendra Lalwani,	,,,,,,,,,,");
@@ -281,7 +281,7 @@ list.push("P1-Villa-111,	Rajat Kumar Sharma,	,,,,,,,,,,");
         list.push("P2-Villa-22-B,	Lokes hKumar Bapna,	,,,,,,,,,,");
         list.push("P2-Villa-23,	Lokesh Kumar Bapna,	,,,,,,,,,,");
         list.push("P2-Villa-24,	Dileep Dhandel,	,,,,,,,,,,");
-        list.push("P2-Villa-25,	Manisha Sharma,	,,,,,,,,,,");
+        list.push("P2-Villa-25,	Manisha Sharma,	,,,,,,,,200,200,200");
         list.push("P2-Villa-26,	Pragya Sharma,	,,,,,,,,,,");
         list.push("P2-Villa-27,	Manju Rohia,	,,,,,,,,200,200,200");
         list.push("P2-Villa-28,	Nilam Kumari Yadav,	,,,,,,,,,,");
