--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 	<!--
 			<img class="NO-CACHE" data-src="img/GC.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
 	
-			
+
 		-->
-		<p style="color: rgb(229, 54, 19)"><b>  Details Are updated till 22 Oct 2023   </b></p>
+		<p style="color: rgb(229, 54, 19)"><b>  Details Are updated till 24 Oct 2023, 8:11 AM   </b></p>
 
 		<p style="color: rgb(37, 34, 246)"><b>  Dussehra Celebration , 24 Oct 2023 From 7:00 PM  </b></p>
 
