--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	
 
 		-->
-		<p style="color: rgb(229, 54, 19)"><b>  Details Are updated till 24 Oct 2023, 11:45 AM   </b></p>
+		<p style="color: rgb(229, 54, 19)"><b>  Details are updated till 24 Oct 2023, 11:45 AM   </b></p>
 
 		<p style="color: rgb(37, 34, 246)"><b>  Dussehra Celebration , 24 Oct 2023 From 7:00 PM  </b></p>
 
