--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -170,7 +170,7 @@
   list.push("	P1-Villa-25	,,,,,,,,,,,");
   list.push("	P1-Villa-26	,Rakesh Kumar,500,500,500,500,500,500,-1500,200,200,200");
   list.push("	P1-Villa-27	,Deepesh Sharma,,,,,,,,,,");
-  list.push("	P1-Villa-28	,Mohit Juneja,500,500,500,,,,,,,");
+  list.push("	P1-Villa-28	,Mohit Juneja,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-29	,,,,,,,,,,,");
   list.push("	P1-Villa-30	,,,,,,,,,,,");
   list.push("	P1-Villa-31	,,,,,,,,,,,");
@@ -189,7 +189,7 @@
   list.push("	P1-Villa-44	,Ravindra Verma,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-45	,Nand Singh Rajawat,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-46	,Vikas Mahala,500,500,500,,,,,,,");
-  list.push("	P1-Villa-47	,Manoj Ji,500,500,500,,,,,,,");
+  list.push("	P1-Villa-47	,Manoj Ji,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-48	,R C Sharma,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-49	,,,,,,,,,,,");
   list.push("	P1-Villa-50	,Abhishek Garg,500,500,500,,,,,200,200,200");
@@ -206,13 +206,13 @@
   list.push("	P1-Villa-61	,Naresh Dhanjani,,,,,,,,200,200,200");
   list.push("	P1-Villa-62	,Lal Singh,0,0,0,,,,,,,,");
   list.push("	P1-Villa-63	,Yogesh Ji,500,500,500,,,,,200,200,200");
-  list.push("	P1-Villa-64	,Sahil Meghnani,500,500,500,,,,,,,");
+  list.push("	P1-Villa-64	,Sahil Meghnani,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-65	,Jalaj Rajpurohit,500,500,500,500,500,500,-1500,200,200,200");
   list.push("	P1-Villa-66	,,,,,,,,,,,");
   list.push("	P1-Villa-67	,Abhishek Jaiman,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-68	,Shrish Jaiman,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-69	,Piyush Sharma,500,500,500,,,,,200,200,200");
-  list.push("	P1-Villa-70	,Vineet Sharma,500,500,500,,,,,,,");
+  list.push("	P1-Villa-70	,Vineet Sharma,500,500,500,,,,,200,200,200");
   list.push("	P1-Villa-71	,Suresh kumar Sharma,500,500,500,,,,,,,");
   list.push("	P1-Villa-72	,Nikesh Chaudhary,500,500,500,,,,,,,");
   list.push("	P1-Villa-73	,Richa Sharma,500,500,500,,,,,,,");
