--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		-->
 		<p style="color: rgb(229, 54, 19)"><b>  Details are updated till 25 Oct 2023, 08:15 AM   </b></p>
 
-		<p style="color: rgb(37, 34, 246)"><b>  Dussehra Celebration , 24 Oct 2023 From 7:00 PM  </b></p>
+	
 
 		<div style="margin-top:50px">
 			<div>
@@ -278,7 +278,8 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
-							<p style="color: red">Next Meeting date not decided yet.</p> 
+							<p style="color: red">Expected next Meeting on Sunday 29-Oct-2023, but not confirmed yet.</p> 
+							<!--<p style="color: red">Next Meeting date not decided yet.</p> -->
 							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
 							
 							 <p style="color: rgb(20, 9, 238)">Next Meeting date for RWA, Yet to decide, any of day from 13 or 14 or 15 August (As per per maximum availability).</p> 
