--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -295,6 +295,7 @@
         list.push("Till previous month final balance ,Villa 10,1548,C");
         list.push("Other Activity balance ,Villa 10,1163,C");
         list.push("Collection ,Villa 10,35400,C");
+        list.push("Dussehra celebration Ravan dahan  ,Villa 10,-12910,D");
 
          generateTable(list)
          SetBalanceColor();
